# OB-Xf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HISTORY.md  README.md  REWORK.md
.github/ISSUE_TEMPLATE/: bug-report.md  discussion-or-question.md  feature-request.md  release-checklist.md
.github/workflows/: build-plugin.yml  code-checks.yml
Images/: CMakeLists.txt
Source/: Constants.h  MidiHandler.cpp  MidiHandler.h  ParamaterManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Utils.cpp  Utils.h
Source/Components/: Contrainer.h  PresetBar.cpp  PresetBar.h  ScaleComponent.cpp  ScaleComponent.h  SetPresetNameWindow.cpp  SetPresetNameWindow.h
Source/Core/: Constants.h  ParamaterManager.h  StateManager.cpp  StateManager.h
Source/Engine/: APInterpolator.h  AdsrEnvelope.h  AudioUtils.h  BlepData.h  Decimator.h  DelayLine.h  Filter.h  Lfo.h  Motherboard.h  ObxdBank.h  ObxdOscillatorB.h  ObxdVoice.h  ObxfBank.h  ObxfOscillatorB.h  ObxfVoice.h  ParamSmoother.h  Params.h  ParamsEnum.h  PulseOsc.h  SawOsc.h  SynthEngine.h  TriangleOsc.h  Tuning.h  VoiceQueue.h  midiMap.h
Source/Gui/: ButtonList.h  ImageButton.h  Knob.h  MidiKeyboard.h  ToggleButton.h  TooglableButton.h
Source/Interface/: IParameterState.h  IProgramState.h  ProgramChangeCallback.h
Source/MTS/: libMTSClient.cpp
Source/Midi/: MidiHandler.cpp  MidiHandler.h
Source/Parameter/: Adaptor.h  FIFO.h  FreeLayoutHelper.h  Helper.h  Info.h  Manager.cpp  Manager.h  ParameterAdaptor.h  ParameterInfo.h  ParameterManager.cpp  ParameterManager.h  SynthParam.h
Source/State/: StateManager.cpp  StateManager.h
Source/Utilities/: KeyCommandHandler.cpp  KeyCommandHandler.h
assets/: CMakeLists.txt  README.md
assets/Surge Synth Team/OB-Xf/: Skin.xml  Theme.xml
assets/Surge Synth Team/OB-Xf/Banks/: rfawcett160 bank.fxb
assets/Surge Synth Team/OB-Xf/MIDI/: Default.xml  Roland Juno DS.xml  minilabMKII.xml
assets/Surge Synth Team/OB-Xf/Patches/: Terminate This RCAF.fxp
assets/Surge Synth Team/OB-Xf/Presets/: Accidental Bass RCAF.fxp  AccidentalBassRCAF.fxp  Default.fxp  TerminateThisRCAF.fxp  Tron Bells RCAF.fxp
assets/Surge Synth Team/OB-Xf/Themes/Default/: coords.xml  theme.xml
assets/Surge Synth Team/OB-Xf/Themes/Default Vector/: theme.xml
assets/Surge Synth Team/OB-Xf/Themes/QuickAndDirtyGREC/: coords.xml  menu@4x.xcf
assets/binary/VectorTheme/: theme.xml
assets/installer/Surge Synth Team/OB-Xf/: settings.xml
assets/installer/Surge Synth Team/OB-Xf/Banks/: Factory.fxb
assets/installer/Surge Synth Team/OB-Xf/Patches/Atmospheres/: Aboard The Arp Train.fxp  Bouncing Phaser.fxp  Gated Unstable Plucks.fxp  S&H Drone.fxp  Vibrores.fxp
assets/installer/Surge Synth Team/OB-Xf/Patches/Bass/: BS A Modern Day Warrior.fxp  BS Back To The Future.fxp  BS Below.fxp  BS Definitely Below .fxp  BS Didger Saw.fxp  BS Dubber.fxp  BS Expanded.fxp  BS Faxi Slap.fxp  BS Ignitor.fxp  BS Nadir.fxp  BS Ninja Turtle.fxp  BS Notchsense.fxp  BS Outer Bass.fxp  BS Possible Funk.fxp  BS Running.fxp  BS Stealth.fxp  BS Thick Unison.fxp  BS Uni Frog.fxp  BS Whoa Bace.fxp
assets/installer/Surge Synth Team/OB-Xf/Patches/Basses/: '32 Rez Bass.fxp  A Modern Day Warrior.fxp  Acoustic Bass.fxp  Back To The Future.fxp  Below.fxp  Blastine.fxp  Definitely Below.fxp  Didger Saw.fxp  Diver.fxp  Dubber Bass.fxp  Electric Bass 1.fxp  Electric Bass 2.fxp  Electric Bass 3 Muted.fxp  Electric Bass 3.fxp  Electric Bass.fxp  Expanded.fxp  Faxi Slap.fxp  Fretless Bass.fxp  Hit It.fxp  (+28 more)
assets/logo/: CMakeLists.txt
cmake/: basic_installer.cmake  get_dependencies.cmake
lib/: inplace_function.h
libs/: CMakeLists.txt
resources/: NightlyBlurb.md  ReworkBlurb.md
resources/installer/: ZipReadme.txt
scripts/: attacksim.py  fix_file_comments.pl  fix_header_guards.pl  make-git-info.sh  patch-tool.py
scripts/installer_linux/: make_deb.sh
src/: ObxfEditor.cpp  ObxfEditor.h  ObxfProcessor.cpp  ObxfProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Utils.cpp  Utils.h  configuration.h
src/components/: Constrainer.h  MidiLearnOverlay.h  PresetBar.cpp  ScalableComponent.cpp  ScalableComponent.h  ScalingImageCache.cpp  ScalingImageCache.h  SetPresetNameWindow.cpp  SetPresetNameWindow.h
src/core/: Constants.h
src/editor/: ObxfEditorLayout.cpp  ObxfEditorLayout.h  ObxfEditorMenus.cpp  ObxfEditorMenus.h  ObxfEditorMidiLearn.cpp  ObxfEditorMidiLearn.h  ObxfEditorProgrammer.cpp  ObxfEditorProgrammer.h  ObxfEditorTheme.cpp  ObxfEditorTheme.h
src/engine/: AdsrEnvelope.h  AudioUtils.h  Bank.h  BlepData.h  Decimator.h  DelayLine.h  Filter.h  Lfo.h  MidiMap.h  Motherboard.h  Noise.h  ObxfOscillatorB.h  ObxfVoice.h  OscillatorBlock.h  ParamSmoother.h  ParameterTags.h  Parameters.h  Params.h  ParamsEnum.h  Program.h  PulseOsc.h  SawOsc.h  Smoother.h  SynthEngine.h  TriangleOsc.h  Tuning.h  Voice.h  VoiceMatrix.h  VoiceQueue.h  midiMap.h
src/gui/: AboutComponent.h  AboutScreen.h  ButtonList.h  Display.h  FocusDebugger.h  FocusOrder.h  HasScaleFactor.h  ImageButton.h  ImageMenu.h  Knob.h  Label.h  LookAndFeel.cpp  LookAndFeel.h  MPEMatrix.h  MidiKeyboard.h  MultiStateButton.h  MutatorMenu.h  OBXFLookAndFeel.h  PopupMenuScale.h  SaveDialog.h  ToggleButton.h  TriStateButton.h
src/interface/: IParameterState.h  IProgramState.h
src/midi/: MidiHandler.cpp  MidiHandler.h
src/obxf-python/: CMakeLists.txt  MANIFEST.in.txt  ObxfPython.cpp  ObxfPython.h  README.md  pyproject.toml
src/parameter/: FIFO.h  FreeLayoutHelper.h  ParameterAdapter.cpp  ParameterAdapter.h  ParameterAdaptor.h  ParameterAlgos.h  ParameterAttachment.h  ParameterCoordinator.cpp  ParameterCoordinator.h  ParameterInfo.h  ParameterList.h  ParameterManager.cpp  ParameterManager.h  ParameterUpdateHandler.cpp  ParameterUpdateHandler.h  SynthParam.h  ValueAttachment.h
src/state/: ObxdImporter.cpp  ObxdImporter.h  StateManager.cpp  StateManager.h
src/tests/: CMakeLists.txt  env.cpp  filt.cpp  main.cpp  mpe.cpp  noise.cpp  obxd_import.cpp  osc.cpp
src/utilities/: KeyCommandHandler.cpp  KeyCommandHandler.h
(+631 files in other folders)
