[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "obxfpy"
version = "1.0.0"
description = "Python bindings for OB-Xf synthesizer"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/surge-synthesizer/OB-Xf"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DOBXF_BUILD_PYTHON_BINDINGS=ON"]
wheel.packages = []         # no pure Python packages, just the extension
install.components = ["obxfpy"]